<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/backgroundd"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_etUsername"
            android:inputType="textPersonName"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textViewUsernameError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_UsernameError"
            android:textStyle="bold"
            android:visibility="invisible"
            android:textColorHint="@color/red"
            >

        </TextView>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/login_etPassword"/>

        <TextView
            android:id="@+id/textViewPasswordError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_PasswordError"
            android:textStyle="bold"
            android:visibility="invisible"
            android:textColorHint="@color/red"
            >

        </TextView>

        <TextView
            android:id="@+id/tvUserOrPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/userPsswordError"
            android:gravity="center"
            android:textStyle="bold"
            android:visibility="invisible"
            android:textColorHint="@color/red"
            >

        </TextView>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btnLogin"
            android:layout_gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="139dp"
        android:layout_height="87dp"
        android:layout_gravity="center"
        android:fontFamily="@font/dancing_script_bold"
        android:text="@string/login"
        android:textSize="52sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242">

    </TextView>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:text="@string/login_btnSign_in"
        android:textColor="@android:color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>


