<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/backgroundd"
    >

    <ImageView
        android:id="@+id/go_to_settings"
        android:layout_width="62dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_settings"
        app:layout_constraintRight_toRightOf="parent"
        app:tint="@color/black"
        tools:layout_editor_absoluteY="23dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/btn_go_to_register"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="30dp"
            android:text="@string/register_btnRegister" />

        <Button
            android:id="@+id/btn_go_to_login"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_btnLogin" />

    </LinearLayout>

    <TextView
        android:layout_width="372dp"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:fontFamily="@font/dancing_script_bold"
        android:text="@string/login_tvTalkapp"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.253">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>


